--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,11 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "paths": {
+      "pg-range-datepicker": [
+        "dist/pg-range-datepicker"
+      ]
+    },
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
